# noesis-foundry

./: .gitignore  README.md  VISION.md  pyproject.toml
docs/: install.md  source-bundle-schema-v1.md
docs/adr/: 0001-obsidian-stack.md
docs/architecture/: noesis-local-first-obsidian-interface.md
examples/mcp/: noesis-mcp.example.json
examples/noesis-vault/: README.md  noesis.vault.yaml
examples/noesis-vault/.obsidian/: workspace.json
examples/noesis-vault/_bases/: lifecycle-dashboard.base  review-queue.base  traceability-workbench.base
examples/noesis-vault/_canvas/: noesis-lifecycle.canvas
examples/noesis-vault/_dashboards/: noesis-review-dashboard.md
examples/noesis-vault/_templates/: claim.md  evidence.md  knowledge-gap.md  operational-context.md  review.md  source.md  synthesis.md
examples/noesis-vault/claims/: claim-agent-memory-dogfood.md  claim-cli-authoring-loop.md  claim-noesis-roadmap-project-memory-first.md  claim-project-memory-corpus-continuation.md  claim-useful-memory-requires-lifecycle.md
examples/noesis-vault/context/: operational-context-agent-memory-dogfood.md  operational-context-first-cli-mcp-workflow.md  operational-context-noesis-roadmap-phase-orchestration.md  (+1 more)
scripts/: smoke-install.sh
skills/: README.md
skills/noesis-claim-review/: SKILL.md
skills/noesis-context/: SKILL.md
skills/noesis-ingest/: SKILL.md
src/noesis/: __init__.py  cli.py  mcp_server.py  vault.py
tests/: test_cli.py  test_console_scripts.py  test_distribution_docs.py  test_mcp_server.py  test_mcp_stdio_smoke.py  test_skills.py
(+44 files in other folders)
